; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_sys_coalition.c_coalition_create_syscall.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_sys_coalition.c_coalition_create_syscall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COALITION_CREATE_FLAGS_PRIVILEGED = common dso_local global i32 0, align 4
@COALITION_CREATE_FLAGS_MASK = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@COALITION_TYPE_MAX = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8
@ENOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"(addr, %u) -> %llu\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @coalition_create_syscall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @coalition_create_syscall(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @COALITION_CREATE_FLAGS_GET_TYPE(i32 %13)
  store i32 %14, i32* %10, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @COALITION_CREATE_FLAGS_GET_ROLE(i32 %15)
  store i32 %16, i32* %11, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @COALITION_CREATE_FLAGS_PRIVILEGED, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  store i32 %23, i32* %12, align 4
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* @COALITION_CREATE_FLAGS_MASK, align 4
  %26 = xor i32 %25, -1
  %27 = and i32 %24, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %2
  %30 = load i32, i32* @EINVAL, align 4
  store i32 %30, i32* %3, align 4
  br label %60

31:                                               ; preds = %2
  %32 = load i32, i32* %10, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %38, label %34

34:                                               ; preds = %31
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* @COALITION_TYPE_MAX, align 4
  %37 = icmp sgt i32 %35, %36
  br i1 %37, label %38, label %40

38:                                               ; preds = %34, %31
  %39 = load i32, i32* @EINVAL, align 4
  store i32 %39, i32* %3, align 4
  br label %60

40:                                               ; preds = %34
  %41 = load i32, i32* %10, align 4
  %42 = load i32, i32* %11, align 4
  %43 = load i32, i32* %12, align 4
  %44 = call i64 @coalition_create_internal(i32 %41, i32 %42, i32 %43, i32* %9)
  store i64 %44, i64* %7, align 8
  %45 = load i64, i64* %7, align 8
  %46 = load i64, i64* @KERN_SUCCESS, align 8
  %47 = icmp ne i64 %45, %46
  br i1 %47, label %48, label %50

48:                                               ; preds = %40
  %49 = load i32, i32* @ENOMEM, align 4
  store i32 %49, i32* %6, align 4
  br label %58

50:                                               ; preds = %40
  %51 = load i32, i32* %9, align 4
  %52 = call i32 @coalition_id(i32 %51)
  store i32 %52, i32* %8, align 4
  %53 = load i32, i32* %5, align 4
  %54 = load i32, i32* %8, align 4
  %55 = call i32 @coal_dbg(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %53, i32 %54)
  %56 = load i32, i32* %4, align 4
  %57 = call i32 @copyout(i32* %8, i32 %56, i32 4)
  store i32 %57, i32* %6, align 4
  br label %58

58:                                               ; preds = %50, %48
  %59 = load i32, i32* %6, align 4
  store i32 %59, i32* %3, align 4
  br label %60

60:                                               ; preds = %58, %38, %29
  %61 = load i32, i32* %3, align 4
  ret i32 %61
}

declare dso_local i32 @COALITION_CREATE_FLAGS_GET_TYPE(i32) #1

declare dso_local i32 @COALITION_CREATE_FLAGS_GET_ROLE(i32) #1

declare dso_local i64 @coalition_create_internal(i32, i32, i32, i32*) #1

declare dso_local i32 @coalition_id(i32) #1

declare dso_local i32 @coal_dbg(i8*, i32, i32) #1

declare dso_local i32 @copyout(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
